--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.17.0",
     "react-tweet": "^3.2.2",
     "react-twitter-embed": "^4.0.4"
